# skill-manager

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  audit_log.py  backup_manager.py  cli.py  config_io.py  constants.py  dependency_manager.py  diff_util.py  health_analyzer.py  hook_installer.py  maintenance_manager.py  manager.py  package_manager.py  path_picker.py  pyproject.toml  report.py  requirements.txt  scanner.py  server.py  skill_parser.py  snapshot_manager.py  template_manager.py  trash_manager.py  updater.py  usage_collector.py  usage_insights.py  user_settings.py
.github/workflows/: ci.yml
docs/: CLI_REFERENCE.md  RELEASE_CHECKLIST.md  USER_GUIDE.md
scripts/: install.ps1  install.sh  log_usage.py
static/: index.html
tests/: test_backup_manager.py  test_health_analyzer.py  test_manager.py  test_package_manager.py  test_scanner.py  test_server.py  test_skill_parser.py  test_trash_manager.py
