[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-manager"
version = "2.5.0"
description = "Local dashboard and CLI for managing Agent Skills"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "funnaz" }]
keywords = ["agent", "skills", "codex", "grok", "claude", "cursor"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Framework :: FastAPI",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
]
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pyyaml>=6.0",
  "python-docx>=1.1",
  "fpdf2>=2.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/funnaz/skill-manager"
Repository = "https://github.com/funnaz/skill-manager"
Issues = "https://github.com/funnaz/skill-manager/issues"

[project.scripts]
skill-manager = "cli:main"

[tool.setuptools]
py-modules = [
  "backup_manager",
  "audit_log",
  "cli",
  "config_io",
  "constants",
  "dependency_manager",
  "diff_util",
  "hook_installer",
  "health_analyzer",
  "manager",
  "maintenance_manager",
  "package_manager",
  "path_picker",
  "report",
  "scanner",
  "server",
  "skill_parser",
  "snapshot_manager",
  "template_manager",
  "trash_manager",
  "updater",
  "usage_collector",
  "usage_insights",
  "user_settings",
]

[tool.setuptools.data-files]
static = ["static/index.html"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["F"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
